--- a/OldVersions/GITATTRIBUTES/1/1-100/README.cfg
+++ b/OldVersions/GITATTRIBUTES/1/1-100/README.cfg
@@ -32,6 +32,20 @@
 *.css linguist-detectable=true
 *.css linguist-documentation=false
 *.css linguist-language=CSS
+# Harbour source file
+*.ch linguist-detectable=true
+*.ch linguist-documentation=false
+*.ch linguist-language=Harbour
+*.hb linguist-detectable=true
+*.hb linguist-documentation=false
+*.hb linguist-language=Harbour
+*.hbp linguist-detectable=true
+*.hbp linguist-documentation=false
+*.hbp linguist-language=Harbour
+*.prg linguist-detectable=true
+*.prg linguist-documentation=false
+*.prg linguist-language=Harbour
+# Less stylesheet file
 # Less stylesheet file
 *.less linguist-detectable=true
 *.less linguist-documentation=false
@@ -161,10 +175,13 @@
 *.gif linguist-detectable=false
 *.gif linguist-documentation=false
 *.gif linguist-language=GIF
+
 # End of linguist script
 
 # File info
-# File type: gitattributes file (.gitattributes)
-# File version: 4 (2022, Tuesday, June 28th at 2:32 pm PST)
-# Line count (including blank lines and compiler line): 171
+
+# File type: gitattributes file (*.gitattributes)
+# File version: 5 (2024, Monday, December 16th at 11:41 pm PST)
+# Line count (including blank lines and compiler line): 188
+
 # End of script
